--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,16 @@ pagination_dir: page
 
 # Extensions
 ## Plugins: http://hexo.io/plugins/
+plugins:
+- hexo-generator-feed
+- hexo-generator-sitemap
+
 ## Themes: http://hexo.io/themes/
 theme: jacman
+
+sitemap:
+  path: sitemap.xml
+  
 stylus:
   compress: true
 # Deployment
