--- a/_config.yml
+++ b/_config.yml
@@ -61,16 +61,36 @@ per_page: 10
 pagination_dir: page
 
 # Extensions
-## Plugins: http://hexo.io/plugins/
-plugins:
-- hexo-generator-feed
-- hexo-generator-sitemap
 
 ## Themes: http://hexo.io/themes/
 theme: jacman
+exclude_generator:
 
+## Plugins: http://hexo.io/plugins/
+Plugins:
+- hexo-generator-feed
+- hexo-generator-sitemap
+
+#sitemap
 sitemap:
   path: sitemap.xml
+
+#Feed Atom
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+
+# Markdown
+## https://github.com/chjj/marked
+markdown:
+  gfm: true
+  pedantic: false
+  sanitize: false
+  tables: true
+  breaks: true
+  smartLists: true
+  smartypants: true
   
 stylus:
   compress: true
