--- a/themes/jacman/_config.yml
+++ b/themes/jacman/_config.yml
@@ -16,7 +16,6 @@ widgets:
 - tag
 - links
 - rss
-- weibo
 
 ## provide seven widgets:category,tag,rss,archive,tagcloud,links,weibo,douban
 
@@ -52,7 +51,7 @@ creative_commons: none
 author:
   intro_line1:  "Hello ,I'm Zhang Guang (or Daniel) in Alibaba."    ## your introduction on the bottom of the page
   intro_line2:  "This is my personal blog."  ## the 2nd line
-  weibo: 1911699691     ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
+  weibo: zhguangboy     ## e.g. wuchong1014 or 2176287895 for http://weibo.com/2176287895
   weibo_verifier: 4e804b1d  ## e.g. b3593ceb Your weibo-show widget verifier ,if you use weibo-show it is needed.
   tsina: 1911699691     ## e.g. 2176287895  Your weibo ID,It will be used in share button.
   douban:     ## e.g. wuchong1014 or your id for https://www.douban.com/people/wuchong1014
